# wagtail-localize-rws-languagecloud

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  testmanage.py  tox.ini  tsconfig.json  webpack.config.js
.circleci/: config.yml  trigger-nightly-build.sh
.github/workflows/: test.yml
docs/: slack-notification-examples.md
wagtail_localize_rws_languagecloud/: CHANGELOG.md  __init__.py  apps.py  checks.py  emails.py  forms.py  importer.py  models.py  rws_client.py  signals.py  sync.py  views.py  wagtail_hooks.py
wagtail_localize_rws_languagecloud/management/commands/: create_missing_rws_project_settings.py  sync_rws.py  update_translated_pages.py
wagtail_localize_rws_languagecloud/migrations/: 0001_initial.py  0002_auto_20210914_1406.py  0003_auto_20211008_1132.py  0004_add_status_change_order.py  0004_auto_20211118_1013.py  0005_auto_20211124_0956.py  0005_languagecloudprojectsettings.py  0006_languagecloudfile_combined_status.py  0006_languagecloudfile_revision.py
wagtail_localize_rws_languagecloud/static/wagtail_localize_rws_languagecloud/css/: wagtail-localize-overrides.css
wagtail_localize_rws_languagecloud/static/wagtail_localize_rws_languagecloud/js/: .gitignore
wagtail_localize_rws_languagecloud/templates/wagtail_localize/admin/: edit_translation.html
wagtail_localize_rws_languagecloud/templates/wagtail_localize_rws_languagecloud/admin/: languagecloud_projects_report.html  languagecloud_report.html  update_translations_override.html
wagtail_localize_rws_languagecloud/templates/wagtailadmin/shared/: locale_selector.html
wagtail_localize_rws_languagecloud/templatetags/: wagtaillocalizerwslanguagecloud_tags.py
wagtail_localize_rws_languagecloud/test/: __init__.py  apps.py  models.py  settings.py  urls.py
wagtail_localize_rws_languagecloud/test/migrations/: 0001_initial.py  0002_testpage.py
wagtail_localize_rws_languagecloud/tests/: helpers.py  test_admin.py  test_checks.py  test_emails.py  test_forms.py  test_importer.py  test_models.py  test_rws_client.py  test_signals.py  test_sync.py  test_templatetags.py  test_update_translated_pages.py  test_views.py
(+3 files in other folders)
